--- a/locale/RU_ru/commands/save/save_command.yml
+++ b/locale/RU_ru/commands/save/save_command.yml
@@ -13,4 +13,5 @@ save-command-param-path-remark: |
   Если вариантов для выбора в меню поиска больше 25, то оставит только первые 25.
   Если сейв заканчивается на "/" попытается открыть меню поиска по данному пути
 save-command-folder-not-linked: "**Для скачивания сейвов необходимо привязать папку командой /привязать-папку**"
+save-command-db-title: "## Выберите базу данных, откуда нужно скачать сейв"
 
